# SystemScripter

./: Dates.py  LICENSE  README.md  README.rst  Setup.py  SystemInfo.py  SystemScripter-0.1.1.py  SystemScripter.py  SystemScripter.pyd  __init__.py  dates.py  requirements.txt  setup.cfg
ArchivedDists/dist1/: SystemScripter-0.1.1.pyi
SystemScripter.build/: __constants.const  __constants.cpp  __constants.h  __loader.cpp  clcache-stats.4540.txt  import.exp  import.lib  module.SystemScripter.const  module.SystemScripter.cpp  scons-report.txt
src/SystemScripter/: Build.bat  SystemScripter.py  SystemScripter.pyi  __init__.py
