[metadata]
name = SystemScripter
version = 0.1.0
author = Ixonblitz-MatOS
author_email = gavellmathew@gmail.com
description = Package made to script for windows system and get system info
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Ixonblitz-MatOS/SystemScripter
project_urls =
    Bug Tracker = https://github.com/Ixonblitz-MatOS/SystemScripter/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: Microsoft :: Windows :: Windows 10

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.10

[options.packages.find]
where = src